--- a/Semana 5/css/css_index.css
+++ b/Semana 5/css/css_index.css
@@ -14,3 +14,227 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+#header{
+    background-color: lightblue;
+    border: 2px solid rgb(0, 195, 255);
+    border-radius: 20px 20px 10px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    grid-area: header; /*Css grid*/
+}
+ul{
+    padding: 0 0;
+    margin: 0 1px;
+}
+li{
+    display: inline;
+    list-style: none;
+    margin: 0 5px;
+    font: bold 12px verdana;
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+#menu{
+    grid-area: nav;
+    background-color: rgb(247, 173, 62);
+    border:2px solid white;
+    border-radius: 22px;
+    display: flex;
+    flex-direction:row;
+    justify-content:space-between;
+    align-items: center;
+    padding: 5px;
+    margin:5px;
+}
+#buscarbox input{ /*nuevo estilo para la barra de búsqueda*/
+    height: 25px;
+    width: 0px;
+    padding:0px 0px;
+    border-radius:40px;
+    border:0px;
+    padding-right: 50px;
+    transition: 0.5s ease;
+}
+#buscarbox input:hover{ /*para expandir el ancho del buscador*/
+    width: 150px;
+    padding-left: 10px;
+    outline: none;
+}
+/*section*/
+#main{
+    grid-area: main;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    border:2px solid rgb(112, 116, 124);
+    max-width:100%;
+    height: auto;
+}
+figure{
+    display: inline;
+    margin: 45px;
+    padding: 5px;
+}
+.programa{
+    display: inline-block;
+    margin: 5px;
+    padding: 5px;
+    width: 45%;
+    height: 200px;
+    position: relative;
+    border: 1px solid black;
+    border-radius: 15px 15px;
+}
+section article{
+    background-color: rgba(255,255,255,0.6);
+    backdrop-filter: blur(5px);
+    margin: 20px;
+}
+#sidebar{
+    grid-area: sidebar;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255,255,255,0.5);
+    backdrop-filter: blur(5px);    
+}
+iframe{
+    max-width: 100%;
+    height: auto;    
+}
+/*pie de página*/
+#footer{
+    grid-area: footer; /*Css grid*/
+    padding-top: 20px;
+    border:2px solid rgb(255, 255, 255);
+    border-radius: 20px 20px 10px 10px;
+    clear:both;
+    background-color: rgba(255,255,255,0.6);
+    backdrop-filter: blur(10px);
+}
+#redes a{
+    padding: 5px;
+    margin: 0px;
+}
+#redes a i:hover{
+    transform: scale(1.5);
+}
+i[class^="fa"]{
+    color:grey;
+    font-size: 20px;
+    border:1px solid transparent;
+}
+/*sección de Css grid en diseño web responsive*/
+/*definición de contenedor grid para PC 3 columnas*/
+#grid-container > *{
+    text-align: center;
+    box-shadow: 1px 1px 7px 0px rgba(0,0,0,0.5);
+}
+#grid-container{
+    display:grid;
+    grid-gap:10px;
+    grid-template:
+    "header header header" 150px
+    "nav nav nav" 50px
+    "main main sidebar" 300px
+    "main main sidebar" 300px
+    "main main sidebar" 250px
+    "footer footer footer" 150px /
+    1000px 150px 300px;
+}
+/*definición de contenedor grid para tablet 2 colmnas*/
+@media (max-width:1024px){
+    #grid-container{
+        grid-template:
+        "header header" 170px
+        "nav main" 800px
+        "nav main" 700px
+        "sidebar sidebar" 650px
+        "footer footer" 100px /
+        250px 450px;
+        font-size: 75%;
+    }
+    h1{
+        font-size: 75%;
+    }
+    #menu{
+        background-color: rgb(247, 173, 62);
+        border-radius: 22px;
+        display: block;
+        padding: 45px;
+        margin:40px;
+        height: auto;
+        text-align: center;
+    }
+    #main{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items:center;
+        flex-wrap: wrap;
+        max-width:100%;
+    }
+    .programa{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items:center;
+        flex-wrap: wrap;
+        max-width: 100%;
+        height: auto;
+        border: 1px solid black;
+    }
+    iframe{
+        max-width: 100%;
+        height: auto;
+    }
+    #buscarbox{
+        display:block;
+        padding: 5px;
+    }
+}
+/*definición de contenedor grid para celular 1 columna*/
+@media (max-width:640px){
+    #grid-container{
+        grid-template:
+        "header" 150px
+        "nav" 50px
+        "main" 1120px
+        "sidebar" 800px
+        "footer" 100px /
+        500px;
+        font-size: 60%;
+    }
+    #menu{
+        display: none;
+    }
+    #main{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items:center;
+        flex-wrap: wrap;
+        max-width: 100%;
+        height: auto;
+    }
+    .programa{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        max-width: 100%;
+        height: auto;
+        border: 1px solid black;
+    }
+    iframe{
+        max-width: 100%;
+        height: auto;
+    }
+    #buscarbox{
+        display:none;
+    }
+}
